--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,6 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <style>
-    .add-button {
-      position: absolute;
-      margin: auto;
-      left: 0px;
-      bottom: 0px;
-    }
-  </style>
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -46,8 +38,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <!-- <button class="add-button">Add to home screen</button> -->
-
 </body>
 
 <script>
@@ -71,24 +61,14 @@
     // Stash the event so it can be triggered later.
     deferredPrompt = e;
     deferredPrompt.prompt();
-    // Update UI to notify the user they can add to home screen
-    addBtn.style.display = 'block';
-
-    // addBtn.addEventListener('click', (e) => {
-    //   // hide our user interface that shows our A2HS button
-    //   addBtn.style.display = 'none';
-    //   // Show the prompt
-    //   deferredPrompt.prompt();
-    //   // Wait for the user to respond to the prompt
-    //   deferredPrompt.userChoice.then((choiceResult) => {
-    //     if (choiceResult.outcome === 'accepted') {
-    //       console.log('User accepted the A2HS prompt');
-    //     } else {
-    //       console.log('User dismissed the A2HS prompt');
-    //     }
-    //     deferredPrompt = null;
-    //   });
-  });
+    deferredPrompt.userChoice.then((choiceResult) => {
+      if (choiceResult.outcome === 'accepted') {
+        console.log('User accepted the A2HS prompt');
+      } else {
+        console.log('User dismissed the A2HS prompt');
+      }
+      deferredPrompt = null;
+    });
   });
 </script>
 
