--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,8 @@
 
   window.addEventListener('beforeinstallprompt', (e) => {
     // Prevent Chrome 67 and earlier from automatically showing the prompt
-    e.preventDefault();
+    // e.preventDefault();
+    e.prompt();
     // Stash the event so it can be triggered later.
     deferredPrompt = e;
     deferredPrompt.prompt();
