--- a/public/index.html
+++ b/public/index.html
@@ -113,9 +113,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <div id="snack">
+  <!-- <div id="snack">
     <div>Add to homeScreen</div>
-  </div>
+  </div> -->
 </body>
 <script>
 
@@ -130,7 +130,6 @@
     navigator.serviceWorker.register('service-worker.js')
       .then(function (reg) {
         console.log("Yes, it did.");
-        showSnack();
       }).catch(function (err) {
         console.log("No it didn't. This happened:", err)
       });
@@ -144,6 +143,7 @@
     e.preventDefault();
     // Stash the event so it can be triggered later.
     deferredPrompt = e;
+    showSnack();
     snack.addEventListener("click", (e) => {
       deferredPrompt.prompt();
       deferredPrompt.userChoice.then((choiceResult) => {
