--- a/public/index.html
+++ b/public/index.html
@@ -113,9 +113,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <!-- <div id="snack">
+  <div id="snack">
     <div>Add to homeScreen</div>
-  </div> -->
+  </div>
 </body>
 <script>
 
